resolved responsive layout issues

--- a/style.css
+++ b/style.css
@@ -1081,7 +1081,7 @@ button:hover {
     height: 120px;
   }
   .footer-container {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
 
   .footer-col:nth-child(4) {
